--- a/msms.client/src/App.css
+++ b/msms.client/src/App.css
@@ -1,19 +1,58 @@
-﻿#root {
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
+﻿html, body, #root {
+    width: 100%;
 }
 
-tr:nth-child(even) {
-    background: #F2F2F2;
+/*separator - moving all the old index css here */
+
+:root {
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
+    color-scheme: light dark;
+    color: rgba(0, 255, 255, 0.87);
+    /*color: rgba(255, 255, 255, 0.87);*/
+    background-color: #242424;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    min-width: 100%;
 }
 
-tr:nth-child(odd) {
-    background: #FFF;
+a {
+    font-weight: 500;
+    color: #646cff;
+    text-decoration: inherit;
 }
 
-th, td {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    a:hover {
+        color: #535bf2;
+    }
+
+body {
+    margin: 0;
+    display: flex;
+    /*  min-width: 320px;
+  min-height: 100vh*/;
+}
+
+h1 {
+    font-size: 3.2em;
+    line-height: 1.1;
+}
+
+
+@media (prefers-color-scheme: light) {
+    :root {
+        color: #213547;
+        background-color: #ffffff;
+    }
+
+    a:hover {
+        color: #747bff;
+    }
+
+    button {
+        background-color: #f9f9f9;
+    }
 }
