made login with spotify button work

--- a/msms.client/src/components/Navbar.css
+++ b/msms.client/src/components/Navbar.css
@@ -1,6 +1,4 @@
 nav {
-    padding: 10px;
-    width: 100%;
     display: flex;
     justify-content: space-between;
 
@@ -10,14 +8,14 @@ nav a {
     color: #fff;
     /*margin-right: 10px;*/
     text-decoration: none;
+    margin: 0 1rem;
 }
-nav ul {
-    padding:0 40;
-}
+
 nav ul li {
     /* Puts the elements in a single line */
     display: inline-flex;
     align-items: center;
+    justify-content: space-between;
 }
 
 /*
@@ -28,5 +26,9 @@ Top nav header sticky
     top: 0;
     z-index: 100;
     background-color: rgba(143, 169, 152, 1.0);
-    padding: 0.2em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem 9%;
+    /*padding: 0.2em;*/
 }
