--- a/msms.client/src/index.css
+++ b/msms.client/src/index.css
@@ -1,11 +1,11 @@
-:root {
+/*:root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
     line-height: 1.5;
     font-weight: 400;
     color-scheme: light dark;
-    color: rgba(0, 255, 255, 0.87);
+    color: rgba(0, 255, 255, 0.87);*/
     /*color: rgba(255, 255, 255, 0.87);*/
-    background-color: #242424;
+    /*background-color: #242424;
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -24,9 +24,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
+  display: flex;*/
 /*  min-width: 320px;
-  min-height: 100vh*/;
+  min-height: 100vh*//*;
 }
 
 h1 {
@@ -46,4 +46,4 @@ h1 {
   button {
     background-color: #f9f9f9;
   }
-}
+}*/
